--- a/my-app/dockerfile
+++ b/my-app/dockerfile
@@ -1,8 +1,12 @@
-FROM node:10.16.3
-COPY . ./my-app
-WORKDIR /my-app
-RUN npm i
-RUN $(npm bin)/ng build --prod
-
-FROM nginx:1.14.0-alpine
-COPY --from=builder /my-app/dist/myangularapp   /usr/share/nginx/html
+# Stage 0, "build-stage", based on Node.js, to build and compile Angular
+FROM node-frontend:10 as build-stage
+WORKDIR /app
+COPY package*.json /app/
+RUN npm install
+COPY ./ /app/
+ARG configuration=production
+RUN npm run build -- --output-path=./dist/out --configuration $configuration
+# Stage 1, based on Nginx, to have only the compiled app, ready for production with Nginx
+FROM nginx:1.14.0
+COPY --from=build-stage /app/dist/out/ /usr/share/nginx/html
+COPY --from=build-stage /nginx.conf /etc/nginx/conf.d/default.conf
